--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,8 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+compileJava {
+    options.compilerArgs += ['-parameters']
+}
+
