--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=learning
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/learningmate?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=abcd1234
+spring.datasource.password=wkddbqls0901
 
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
